# workflows

./: .gitattributes  .gitignore  .sprocketignore  404.html  AGENTS.md  CONTRIBUTING.md  DOCS.md  LICENSE.md  LICENSE.txt  README.md  _LAST  best-practices.md  build_for_dnanexus.html  contributor-style-guide.md  environment.yaml  environment.yml  index.html  index.js  index.md.bak  mkdocs.yaml  mkdocs.yml  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-dev.txt  requirements.txt  script  search.html  sitemap.xml  sprocket.toml  style-guide.md  style.css  test.sh  trigger.md  trigger_build.md
.github/: pull_request_template.md
20241213_115526_trim_single_end/: command  error.json  inputs.json  rerun  stderr.txt  stderr.txt.offset  stdout.txt
assets/: DOCS.md
build_for_dnanexus/: index.html
conf/: aws.conf  lsf.conf
data_structures/: CHANGELOG.md  bowtie2_function.wdl  flag_filter.wdl  flag_filter.yaml  flag_filter_explicit.wdl  read_group.wdl  read_group.yml  sam_flag.wdl  strandedness.wdl
developer_scripts/: run_sprocket_or_miniwdl.sh  update_container_tags.sh
docker/: bio-base.Dockerfile  star-alignment.Dockerfile  star.Dockerfile
docs/: build_for_dnanexus.md
inputs/: rnaseq_v2_inputs.json
pagefind/: pagefind-entry.json  pagefind.en_2b16264dbc.pf_meta  pagefind.en_2f5f8f53e0.pf_meta  pagefind.en_3ff143433b.pf_meta  pagefind.en_42e3335dfa.pf_meta  pagefind.en_492c53e7ae.pf_meta  pagefind.en_4b65d48ef4.pf_meta  pagefind.en_85dca3abdd.pf_meta  pagefind.en_a2bcb7c38f.pf_meta  pagefind.en_cb3b5d3de9.pf_meta  pagefind.en_e0c6a1b27d.pf_meta
(+1303 files in other folders)
