[project]
name = "workflows"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "<3.14,>=3.13"
dependencies = [
    "fastq>=2.0.4",
    "git-lfs>=1.6",
    "matplotlib>=3.10.7",
    "miniwdl>=1.13.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pysam>=0.23.3",
    "pytest-workflow>=2.1.0",
    "ruff>=0.14.6",
    "umap-learn>=0.5.9.post2",
]
